2003-04-21  Sam Steingold  <sds@gnu.org>

	* io.d (ANSI-PATHNAME-READER): understand Allegro CL #P(...)
	syntax which is equivalent to our #S(PATHNAME ...) syntax

2003-04-21  Sam Steingold  <sds@gnu.org>

	EQUALP on HASH-TABLEs now correctly descends the structure
	* predtype.d (hash_table_equalp): new function
	(equalp): use it to compare hash-tables

2003-04-21  Sam Steingold  <sds@gnu.org>

	* spvw_fault.d, spvw_genera1.d, spvw_genera2.d, spvw_genera3.d:
	* spvw_heap.d, spvw_memfile.d (memdump_header, memdump_page)
	(memdump_physpage_state, memdump_reloc_header, old_new_pointer)
	(physpage_state, walkstep_fun, gc_data_list): appended "_t" to
	type names; use MALLOC
	* lispbibl.d (MALLOC): new macro

2003-04-21  Sam Steingold  <sds@gnu.org>

	* control.d (KEYWORD-TEST): treat :ALLOW-OTHER-KEYS NIL correctly
	* record.d (keyword_test): ditto
	* eval.d (fehler_key_badkw): sync the message with the above

2003-04-21  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (analyze1): &WHOLE argument may be a pattern too
	(analyze-key): permit patterns as &KEY arguments (broken on 2003-03-25)

2003-04-21  Sam Steingold  <sds@gnu.org>

	* defmacro.lisp (make-macro-expansion): the environment argument
	in MACRO-FUNCTION is not optional but required
	* init.lisp (backquote, bq-nconc, defmacro): ditto

2003-04-20  Sam Steingold  <sds@gnu.org>

	* m4/rusage.m4 (CL_RUSAGE): use time(2) instead of a constant
	loop: the Moore's law has caught up with this constant already
	* m4/rlimit.m4 (CL_RLIMIT): check getrlimit() too
	* posixmisc.d (RESOURCE-USAGE-LIMITS-INTERNAL): respect
	HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE and HAVE_GETRLIMIT

2003-04-20  Sam Steingold  <sds@gnu.org>

	* package.d (make_present): if symbol is homeless, set its home
	this takes care of the Issue 194
	* clos.lisp (setf find-class): allow nil as the new-value
	this takes care of the Issue 304

2003-04-19  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): when loading clisprc, use MAKE-PATHNAME